# rsqrt

./: Cargo.toml
.cargo/: config.toml
benches/: rsqrt.rs
src/: lib.rs
