[package]
name = "rsqrt"
version = "0.1.0"
authors = ["Felipe Jorge <felipe.jorge.pereira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.7"
criterion = "0.3"
core_affinity = "0.5"


[[bench]]
name = "rsqrt"
harness = false